repository/package/skin/src/main/webapp/screen_ie.css
/**
 * IE-win has problems with calculating the correct size for scrollbars in our editor,
 * resulting in the CPU going nuts (seems like an infinite-loop, props for Redmond). 
 * See more: http://www.positioniseverything.net/explorer/unscrollable.html 
 */
/* Start hide from IE-Mac \*/
div.template-type-center-body, div.editor-perspective-center-body {
   height: 1%;
}
/* End Hide from IE-Mac */

.resource-upload input[type="file"] { border: 1px solid #666; width: 300px;}

.hippo-editor-field-html .htmlarea .xinha_iframe { margin: 0; border: 0px; padding: 0px;}
.hippo-editor-field-html .htmlarea .toolbar {padding:4px; padding-right: 0px;}

/* Fix for IE toolbar issue: HREPTWO-3073 */
table.toolbarRow {
  position: relative;
}

.hippo-window-form td a.action {float:none;}

.hippo-preview-document .hippo-editor-field {overflow: hidden;}
.column-wrapper {width: 99%; overflow: hidden;}

.yui-resize .yui-resize-handle-r { width: 10px; }

